[package]
name = "watermarker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
directories = "6.0.0"
fast_image_resize = { version = "5.3.0", features = ["rayon"] }
image = "0.25.8"
imageproc = "0.25.0"
kamadak-exif = "0.6.1"
mozjpeg = { version = "0.10.13", features = ["nasm_simd", "parallel"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
walkdir = "2.5.0"
